# opengl_learn

./: CMakeLists.txt  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: Shader.h
shader/: fragment.fs  vertex.vs
